# chief-wiggum

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  models.md  package-lock.json  package.json  pyproject.toml  start
benchmarks/: e2edev-report.md  swebench-report.md
config/: languages.json  lenses.json  model_pricing.json  providers.json
docs/: budget-trees.md  code-query.md  factory-telemetry.md  feature-value-discovery.md  gate-rollout.md  gate-validation.md  harness-adapters.md  harnesses.md  languages.md  patterns-registry.md  python-extraction-backlog.md  quality-metrics.md  ratchet.md  single-writer.md  system-layer.md  traceability.md  tracker.md  worker-contracts.md
patterns/: registry.json
scripts/: apply_pattern.py  business_consultant.py  check-deps.sh  check_architecture.py  check_budget_tree.py  check_cw_standards.py  check_deps.py  check_dst_readiness.py  check_gate_validation.py  check_infra_writer.py  check_instrumentation.py  check_patterns.py  check_portability.py  check_single_writer.py  check_traceability.py  check_unresolved.py  ci_scaffold.py  close_epic_audit.py  code_query.py  consult-ai.sh  consult_ai.py  cw.py  domain_to_formal.py  draft_pr.py  e2edev_harness.py  env.py  epic_inventory.py  epic_metadata.py  extract_design.py  factory_log.py  formal_models.py  generate_formal_test_artifacts.py  git_safety.py  hotspot_discovery.py  install-deps.sh  install_deps.py  install_design_artifacts.py  install_epic_artifacts.py  keychain.py  keychain.sh  (+27 more)
tests/fixtures/gate_validation/saas_gate_clean/repo/: pyproject.toml
(+377 files in other folders)
