[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chief-wiggum"
version = "0.1.0"
description = "Agentic SDLC orchestration for Claude Code"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0",
  "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]
transcribe = [
  "openai-whisper",
]
implement = [
  "browser-use",
  "langchain-anthropic",
  "playwright",
]
vertex = [
  "google-cloud-aiplatform",
  "langchain-google-vertexai",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "F541", "F841", "UP017"]
